--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/joy": "^5.0.0-alpha.74",
     "@mui/material": "^5.11.16",
     "@reduxjs/toolkit": "^1.9.3",
+    "@tanstack/react-query": "^4.29.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,7 +18,9 @@
     "axios": "^1.3.4",
     "modern-normalize": "^1.1.0",
     "react": "^18.2.0",
+    "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
